test/conformance/chainsaw/validate/e2e/yaml-signing/01-policy.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: policy
spec:
  timeouts: {}
  try:
  - apply:
      file: policy.yaml
  - assert:
      file: policy-ready.yaml
