test/conformance/chainsaw/validate/e2e/yaml-signing/03-bad-deployment.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: bad-deployment
spec:
  timeouts: {}
  try:
  - script:
      content: "if kubectl apply -f bad.yaml\nthen \n  echo \"Tested failed. Deployment
        was created when it shouldn't have been.\"\n  exit 1 \nelse \n  echo \"Test
        succeeded. Deployment was not created as intended.\"\n  exit 0\nfi\n"
