test/conformance/chainsaw/validate/e2e/yaml-signing/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: yaml-signing
spec:
  concurrent: false
  steps:
  - name: create policy
    use:
      template: ../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: validate-resources
  - name: step-02
    try:
    - apply:
        file: chainsaw-step-02-apply-1-1.yaml
  - name: step-03
    try:
    - script:
        content: "if kubectl apply -f bad.yaml\nthen \n  echo \"Tested failed. Deployment
          was created when it shouldn't have been.\"\n  exit 1 \nelse \n  echo \"Test
          succeeded. Deployment was not created as intended.\"\n  exit 0\nfi\n"
